--- a/config.yaml
+++ b/config.yaml
@@ -1,10 +1,13 @@
 ---
 id: sinatrasapporo-20160619
 base_name: introduction-of-webapp-debugging
-tags: []
-presentation_date: 
-version: 1.0.0
-licenses: []
+tags:
+  - sinatrasapporo
+  - firefox
+presentation_date: 2016/06/19
+version: 2016.6.19.0
+licenses:
+  - CC BY 4.0
 slideshare_id: 
 speaker_deck_id: 
 ustream_id: 
