--- a/config.yaml
+++ b/config.yaml
@@ -18,5 +18,5 @@ author:
   name: Masafumi Yokoyama
   email: myokoym@gmail.com
   rubygems_user: myokoym
-  slideshare_user: myokoym
-  speaker_deck_user: myokoym
+  slideshare_user: 
+  speaker_deck_user: 
